2000-03-04  Gerd Moellmann  <gerd@gnu.org>

	* xlwmenu.c (make_shadow_gcs): Use the widget's colormap instead
	of the screen's default colormap.

2000-02-18  Gerd Moellmann  <gerd@gnu.org>

	* lwlib.c (merge_widget_value): Fix incorrect assignment of
	safe_strdup'd help string.

2000-01-25  Gerd Moellmann  <gerd@gnu.org>

	* lwlib-Xm.c (make_menu_in_widget): Don't add XmNpopdownCallback,
	add XmNunmapCallback.
	(xm_unmap_callback): New function.
	(xm_pull_down_callback): Call pre-activate callback only if
	parent is the menu bar.

2000-01-17  Gerd Moellmann  <gerd@gnu.org>

	* lwlib-Xm.c (xm_arm_callback): New function.
	(make_menu_in_widget): Set xm_arm_callback as XmNarmCallback and
	XmNdisarmCallback for buttons (not supported for other widgets).
	(make_menubar): Set XmNresizeHeight and XmNresizeWidth to False.

	* lwlib-Xlw.c (highlight_hook): New function.
	(xlw_create_menubar, xlw_create_popup_menu): Add highlight_hook as
	callback XtNhighlightCallback.

	* lwlib.c (copy_widget_value_tree): Copy help string.
	(free_widget_value_tree): Free help string.
	(merge_widget_value): Handle help string.
	(allocate_widget_info, lw_register_widget, lw_create_widget): Add
	parameter HIGHLIGHT_CB.
	(lw_get_widget_instance): New function.

	* lwlib-int.h: Add prototype for lw_get_widget_instance.

	* lwlib.h (_widget_value): Add help string.

	* xlwmenu.c (xlwMenuResources): All XtNhighlightCallback.
	(remap_menubar): Call highlight callback.

	* xlwmenu.h (XtNhighlightCallback): New define.

	* xlwmenuP.h (_XlwMenu_part): Add `highlight' callback list.

1999-10-19  Paul Eggert  <eggert@twinsun.com>
	
	Add support for large files, plus some locale improvements.

	* dispatch.c, lwlib-Xaw.c, lwlib-Xlw.c, lwlib-Xm.c, lwlib.c, xlwmenu.c,
	xrdb-cpp.c, xrdb.c:
	Include <config.h> before any system include files.

	* lwlib-Xm.c, lwlib.c:
	Do not include <stdlib.h> or <string.h>, as <config.h> does this.
	
1999-10-07  Gerd Moellmann  <gerd@gnu.org>
